--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,8 +1,6 @@
-/** Thomas Wallace Jr
-  *  7/16/20
-  * Prep course final project */
 
-/** needed to eliminate whitespace around edges **/
+/** General page layout **/
+
 * {
   margin: 0;
   padding: 0;
@@ -10,38 +8,101 @@
 }
 
 body {
-  font-family: Arial;
-  background-color: #C9B79C;
+  font-family: 'Lucida Sans Unicode' sans-serif;
+  background-color: #EAEFD3;
   text-align: center;
 }
 
-
+/** Header and Nav Properties **/
 header {
-  background-color: #71816d;
-  height: 50px;
-  padding: 50px;
+  background-color: #35654d;
+  height: 90px;
+  padding: 10px;
+  display: flex;
+}
+
+.headings {
+  justify-content: left;
+  margin: 10px;
 }
 
 header h1 {
-  text-align: center;
-  font-size: 60px;
+  text-align: left;
+  font-size: 25px;
   font-family: trebuchet;
-  text-shadow: 2px 2px #f1e0c5;
+  text-shadow: 2px 2px #EAEFD3;
 }
 
 header h3 {
-  text-align: center;
+  float: left;
   font-size: 20px;
-  padding-bottom: 5px;
+  margin: 5px 0 0 5px;
+  font-family: trebuchet;
 }
+
+
+header nav {
+  flex: 1;
+}
+
+header nav ul {
+  list-style: none; 
+  display: flex;
+  margin-bottom: 8px;
+  flex-flow: column;
+}
+
+header nav ul li {
+  text-align: right;
+  margin: 3px;
+}
+
+header nav ul li a {
+  color:  #e0c290;
+  margin: 0 8px 0 8px;
+}
+/*
+header nav ul li a:link {
+  color: #ec9280;
+}
+*/
+header nav ul li a:hover {
+  color: #f1e0c5;
+  background-color: black;
+  border-radius: 10px;
+}
+
+/*** Image properties **/
+img {
+  border-radius: 50%;
+  max-width: 300px;
+  max-height: 300px;
+  min-width: 50px;
+  min-height: 50px;
+ }
+
+
+.image-container {
+  align-self: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 
 body h2 {
   font-size: 40px;
   text-align: center;
+  font-family: trebuchet;
 }
 
 body h3 {
+  font-size: 30px;
   text-align: center;
+  font-family: trebuchet;
+}
+
+body ul {
+  list-style: none;
 }
 
 ol {
@@ -55,7 +116,6 @@ ol li   {
   text-indent: 30px;
 }
 
-/*** looked up box shadow code to get glowing effect on hr **/
 .large-hr {
   width: 50%;
   display: block;
@@ -63,9 +123,8 @@ ol li   {
   margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: 0 0 10px 5px #71816d;
+  box-shadow: 0 0 10px 5px #35654d;
 }
-
 .small-hr {
   width: 50%;
   display: block;
@@ -73,54 +132,113 @@ ol li   {
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: 0 0 10px 5px #71816d;
+  box-shadow: 0 0 10px 5px #35654d;
 }
-
-li a:link {
-  color: #cd533b;
-}
-
-li a:visited {
-  color: #71816d;
-}
-
-li a:hover {
-  color: #f1e0c5;
-  background-color: black;
-  border-radius: 10px;
-}
-
-
-
- img {
-  height: 300px;
-  width: 300px;
-}
-
-
-.image-container {
-  text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
 
 .body-container {
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  width: 50%;
-  border: 1px solid;
+  width: 70%;
   margin: auto;
   padding: 10px;
   margin-bottom: 30px;
-
-}
-ul {
-  text-align: left;
-  padding-left: 30px;
 }
 
+.body-item {
+  text-align: center;
+}
+
+/** Portfolio Properties **/
+
+.portfolio-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.project {
+  color: #ffffff;
+  flex: 1;
+  border: 5px solid #35654d;
+  margin: 10px;
+  background-color: black;
+}
+
+.project a {
+  color :#e0c290;
+  font-size: 20px;
+}
+
+.project a:hover {
+  color: black;
+  background-color: #e0c290;
+}
+
+.project div {
+  margin: 15px;
+}
+
+/*** Form Properties **/
+form {
+  border: 1px solid black;
+  display: flex;
+  width: 100%;
+  background-color: black;
+  color: white;
+  justify-content: center;
+}
+
+form label {
+  display: flex;
+  font-size: 20px;
+  font-family:'Trebuchet MS', sans-serif;
+  justify-content: center;
+}
+
+form textarea {
+  height: 85px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+form label {
+  width: 100%;
+}
+
+.contact-form {
+  display: flex;
+  margin: 10px;
+  flex-flow: column wrap;
+  justify-content: center;
+}
+
+form button {
+  font-size: 20px;
+  font-family: 'Trebuchet MS', sans-serif;
+  margin: 10px;
+  color: white;
+  background-color: #35654d;
+  padding: 10px;
+}
+
+.contact {
+  justify-content: center;
+  display: flex;
+}
+
+/** social media Icon links **/
+ol a img {
+  height: 10px;
+  width: 50%;
+  display: flex wrap;
+  margin-top: 20px;
+  flex: 1;
+}
+
+
+/** Footer **/
 footer {
-  background-color: #71816d;
+  background-color: #35654d;
   width: 100%;
   height: 60px;
   padding-top: 30px;
@@ -129,6 +247,64 @@ footer {
 
 footer p {
   text-align: center;
-  color: #242f40;
-  font-size: 25px;
+  color: white;
+  font-size: 20px;
+}
+
+/** Media query**/
+
+@media all and (min-width: 900px) {
+
+  header {
+    height: 150px;
+    flex-flow: column;
+  }
+
+  header nav {
+    align-self: center;
+  }
+
+  .headings {
+    align-self: center;
+  }
+
+  header h1  {
+    font-size: 50px;
+  }
+
+  header h3 {
+    font-size: 25px;
+    align-self: center;
+    margin-left: 120px;
+  }
+
+  header nav ul {
+    flex-flow: row;
+    font-size: 30px;
+  }
+
+  .body-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 75%;
+    border: 1px solid;
+    margin: auto;
+    padding: 10px;
+    margin-bottom: 30px;
+  }
+
+  .portfolio-container {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .project {
+    color: #ffffff;
+    flex: 1;
+    border: 5px solid #35654d;
+    margin: 10px;
+    background-color: black;
+    flex-flow: row wrap;
+  }
 }
