--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -15,7 +15,7 @@ body {
 
 /** Header and Nav Properties **/
 header {
-  background-color: #35654d;
+  background-color: #35654d; 
   height: 90px;
   padding: 10px;
   display: flex;
@@ -28,7 +28,7 @@ header {
 
 header h1 {
   text-align: left;
-  font-size: 25px;
+  font-size: 20px;
   font-family: trebuchet;
   text-shadow: 2px 2px #EAEFD3;
 }
@@ -95,7 +95,7 @@ body h2 {
   font-family: trebuchet;
 }
 
-body h3 {
+.body-container h3 {
   font-size: 30px;
   text-align: center;
   font-family: trebuchet;
@@ -253,7 +253,7 @@ footer p {
 
 /** Media query**/
 
-@media all and (min-width: 900px) {
+@media all and (min-width: 600px) {
 
   header {
     height: 150px;
