--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,4 +1,3 @@
-
 /** General page layout **/
 
 * {
@@ -8,14 +7,14 @@
 }
 
 body {
-  font-family: 'Lucida Sans Unicode' sans-serif;
+  font-family: 'Lucida Sans Unicode'sans-serif;
   background-color: #EAEFD3;
   text-align: center;
 }
 
 /** Header and Nav Properties **/
 header {
-  background-color: #35654d; 
+  background-color: #35654d;
   height: 90px;
   padding: 10px;
   display: flex;
@@ -46,7 +45,7 @@ header nav {
 }
 
 header nav ul {
-  list-style: none; 
+  list-style: none;
   display: flex;
   margin-bottom: 8px;
   flex-flow: column;
@@ -58,9 +57,10 @@ header nav ul li {
 }
 
 header nav ul li a {
-  color:  #e0c290;
+  color: #e0c290;
   margin: 0 8px 0 8px;
 }
+
 /*
 header nav ul li a:link {
   color: #ec9280;
@@ -79,7 +79,7 @@ img {
   max-height: 300px;
   min-width: 50px;
   min-height: 50px;
- }
+}
 
 
 .image-container {
@@ -109,7 +109,7 @@ ol {
   text-align: center;
 }
 
-ol li   {
+ol li {
   display: inline-block;
   text-align: center;
   font-size: 30px;
@@ -125,6 +125,7 @@ ol li   {
   margin-right: auto;
   box-shadow: 0 0 10px 5px #35654d;
 }
+
 .small-hr {
   width: 50%;
   display: block;
@@ -165,7 +166,7 @@ ol li   {
 }
 
 .project a {
-  color :#e0c290;
+  color: #e0c290;
   font-size: 20px;
 }
 
@@ -191,7 +192,7 @@ form {
 form label {
   display: flex;
   font-size: 20px;
-  font-family:'Trebuchet MS', sans-serif;
+  font-family: 'Trebuchet MS', sans-serif;
   justify-content: center;
 }
 
@@ -268,7 +269,7 @@ footer p {
     align-self: center;
   }
 
-  header h1  {
+  header h1 {
     font-size: 50px;
   }
 
@@ -294,11 +295,26 @@ footer p {
     margin-bottom: 30px;
   }
 
+  .skills-container {
+    display: flex;
+    max-width: 50%%;
+  }
+
+  .current-skills {
+    margin: auto;
+  }
+
+  .current-skills li {
+    list-style-type: square;
+    margin: 8px;
+  }
+
   .portfolio-container {
     display: flex;
     flex-direction: row;
+    flex-flow: row wrap;
   }
-  
+
   .project {
     color: #ffffff;
     flex: 1;
